# truecolors

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.devcontainer/: Dockerfile  devcontainer.json
agents/: hardware-design.md  timer-strategy.md
components/appstate/: CMakeLists.txt  appstate.c
components/appstate/include/: appstate.h
components/audio/: CMakeLists.txt  audio.c  beatgrid.c  kick.c  snare.c
components/audio/include/: audio.h  beatgrid.h  kick.h  snare.h
components/common/: CMakeLists.txt  app_bus.c
components/common/include/: app_config.h  app_events.h  board_pins.h
components/effects/: CMakeLists.txt  effects.c
components/effects/include/: effects.h
components/laser/: CMakeLists.txt  laser.c  laser_math.c
components/laser/include/: laser.h  laser_math.h
components/laser/test/: test_laser_math.c
components/server/: CMakeLists.txt  build_web.cmake  http_server.c  ws.c  ws_internal.h
components/server/include/: server.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/sysmgr/: CMakeLists.txt  fancontrol.c  status_led.c  sysmgr.c  sysmgr_safety.c
components/sysmgr/include/: fancontrol.h  sysmgr.h  (+2 more)
components/wifi/: CMakeLists.txt  dns_server.c  wifi_mgr.c
main/: CMakeLists.txt  idf_component.yml  truecolors_main.c
mechanical/: full assy.f3z  full assy.step
pcb/: numb12_driver.kicad_sch  power.kicad_sch  truecolors_driver.csv  truecolors_driver.kicad_pcb  truecolors_driver.kicad_prl  truecolors_driver.kicad_pro  truecolors_driver.kicad_sch
pcb/Library.pretty/: HVSSOP-10_L3.0-W3.0-P0.50-LS4.9-BL-EP-thermal.kicad_mod  POWERDI-5_L5.4-W4.0-LS6.5-RD-thermal.kicad_mod  RES-ADJ-TH_3296W-clean.kicad_mod  TO-252-3_L6.6-W6.1-P4.57-LS9.9-BR-CW-thermal.kicad_mod
test/host/: CMakeLists.txt
test/host/main/: CMakeLists.txt  test_runner.c
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: gzip.mjs
web/src/: App.svelte  app.css
(+18 files in other folders)
